[gd_scene load_steps=19 format=3 uid="uid://dw0pqub4o2o82"]

[ext_resource type="Script" path="res://scenes/overworld/overworld_scene.gd" id="1_fqotl"]
[ext_resource type="Texture2D" uid="uid://bvekg1x8lbqtc" path="res://scenes/overworld/data/Map_wo_Separators_Color_Filters_Blank.png" id="2_fv5n0"]
[ext_resource type="Script" path="res://scenes/overworld/empire_node.gd" id="3_rq8ib"]
[ext_resource type="Resource" uid="uid://bq47arkapu6hu" path="res://units/lysandra/chara.tres" id="4_ai0xe"]
[ext_resource type="Resource" uid="uid://4vhw74hddihj" path="res://units/lysandra/unit_type.tres" id="5_j6qdb"]
[ext_resource type="Resource" uid="uid://ceufx8acegtc1" path="res://units/sitri/chara.tres" id="6_gxwvc"]
[ext_resource type="Resource" uid="uid://bnvl35k6vwirj" path="res://units/sitri/unit_type.tres" id="7_1lo02"]
[ext_resource type="Resource" uid="uid://deby84sa6u6sq" path="res://units/tali/chara.tres" id="8_l0af5"]
[ext_resource type="Resource" uid="uid://bv34ypmo75lcr" path="res://units/tali/unit_type.tres" id="9_fsjus"]
[ext_resource type="Resource" uid="uid://be1oij41g24v5" path="res://units/maia/chara.tres" id="10_6jdt3"]
[ext_resource type="Resource" uid="uid://b3rn2n4vcbfbp" path="res://units/maia/unit_type.tres" id="11_wn8u1"]
[ext_resource type="Resource" uid="uid://dtmi5xkob1tpd" path="res://units/zahra/chara.tres" id="12_8mfsj"]
[ext_resource type="Resource" uid="uid://b8b8l1glgxpp6" path="res://units/zahra/unit_type.tres" id="13_salgo"]
[ext_resource type="Resource" uid="uid://tt2seal55q21" path="res://units/alara/chara.tres" id="14_plgjf"]
[ext_resource type="Resource" uid="uid://m278p32g20ar" path="res://units/alara/unit_type.tres" id="15_p03ft"]
[ext_resource type="PackedScene" uid="uid://vo0h66hnj2jc" path="res://scenes/overworld/territory_button.tscn" id="16_0hx7d"]
[ext_resource type="Script" path="res://scenes/overworld/territory_node.gd" id="17_wovx7"]
[ext_resource type="PackedScene" uid="uid://wjbxvkl38yg8" path="res://scenes/overworld/battle_result_banner.tscn" id="18_l1pmu"]

[node name="Overworld" type="CanvasLayer"]
script = ExtResource("1_fqotl")

[node name="MapWoSeparatorsColorFiltersBlank" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(960, 540)
scale = Vector2(0.96, 0.940767)
texture = ExtResource("2_fv5n0")

[node name="Empires" type="Node" parent="."]

[node name="Player" type="Node" parent="Empires" node_paths=PackedStringArray("home_territory_node")]
script = ExtResource("3_rq8ib")
type = 1
leader_id = &"lysandra"
home_territory_node = NodePath("../../TerritoryButton/Zetennu")
leader = ExtResource("4_ai0xe")
hero_unit = ExtResource("5_j6qdb")

[node name="Boss" type="Node" parent="Empires" node_paths=PackedStringArray("home_territory_node")]
script = ExtResource("3_rq8ib")
type = 2
leader_id = &"sitri"
base_aggression = 0.9
home_territory_node = NodePath("../../TerritoryButton2/Cursed Stronghold")
leader = ExtResource("6_gxwvc")
hero_unit = ExtResource("7_1lo02")

[node name="SpareEmpireSelection" type="Node" parent="."]

[node name="RandomEmpireSelection" type="Node" parent="."]

[node name="Tali" type="Node" parent="RandomEmpireSelection"]
script = ExtResource("3_rq8ib")
leader_id = &"tali"
base_aggression = 0.8
leader = ExtResource("8_l0af5")
hero_unit = ExtResource("9_fsjus")

[node name="Maia" type="Node" parent="RandomEmpireSelection"]
script = ExtResource("3_rq8ib")
leader_id = &"maia"
base_aggression = 0.9
leader = ExtResource("10_6jdt3")
hero_unit = ExtResource("11_wn8u1")

[node name="Zahra" type="Node" parent="RandomEmpireSelection"]
script = ExtResource("3_rq8ib")
leader_id = &"zahra"
base_aggression = 0.7
leader = ExtResource("12_8mfsj")
hero_unit = ExtResource("13_salgo")

[node name="Alara" type="Node" parent="RandomEmpireSelection"]
script = ExtResource("3_rq8ib")
leader_id = &"alara"
base_aggression = 0.5
leader = ExtResource("14_plgjf")
hero_unit = ExtResource("15_p03ft")

[node name="TerritoryButton" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 1475.0
offset_top = 801.0
offset_right = 1475.0
offset_bottom = 801.0

[node name="Zetennu" type="Node" parent="TerritoryButton" node_paths=PackedStringArray("adjacent", "empire_node")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton7/Neru-Khisi")]
_unit_list = PackedStringArray("cultist_axe")
empire_node = NodePath("../../Empires/Player")

[node name="TerritoryButton2" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 273.0
offset_top = 201.0
offset_right = 273.0
offset_bottom = 201.0

[node name="Cursed Stronghold" type="Node" parent="TerritoryButton2" node_paths=PackedStringArray("empire_node")]
script = ExtResource("17_wovx7")
empire_node = NodePath("../../Empires/Boss")

[node name="TerritoryButton3" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 467.0
offset_top = 638.0
offset_right = 467.0
offset_bottom = 638.0

[node name="Nekhet\'s Rest" type="Node" parent="TerritoryButton3" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton10/Ruins of Atesh"), NodePath("../../TerritoryButton9/Fort Zaka")]

[node name="TerritoryButton4" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 826.0
offset_top = 212.0
offset_right = 826.0
offset_bottom = 212.0

[node name="Forsaken Temple" type="Node" parent="TerritoryButton4" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton5/Khel-Et"), NodePath("../../TerritoryButton8/Medjed\'s Beacon"), NodePath("../../TerritoryButton10/Ruins of Atesh")]

[node name="TerritoryButton5" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 1313.0
offset_top = 163.0
offset_right = 1313.0
offset_bottom = 163.0

[node name="Khel-Et" type="Node" parent="TerritoryButton5" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton6/Satayi"), NodePath("../../TerritoryButton4/Forsaken Temple"), NodePath("../../TerritoryButton8/Medjed\'s Beacon")]

[node name="TerritoryButton6" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 1638.0
offset_top = 244.0
offset_right = 1638.0
offset_bottom = 244.0

[node name="Satayi" type="Node" parent="TerritoryButton6" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton5/Khel-Et"), NodePath("../../TerritoryButton7/Neru-Khisi")]

[node name="TerritoryButton7" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 1594.0
offset_top = 519.0
offset_right = 1594.0
offset_bottom = 519.0

[node name="Neru-Khisi" type="Node" parent="TerritoryButton7" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton/Zetennu"), NodePath("../../TerritoryButton6/Satayi"), NodePath("../../TerritoryButton8/Medjed\'s Beacon")]

[node name="TerritoryButton8" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 1088.0
offset_top = 463.0
offset_right = 1088.0
offset_bottom = 463.0

[node name="Medjed\'s Beacon" type="Node" parent="TerritoryButton8" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton5/Khel-Et"), NodePath("../../TerritoryButton4/Forsaken Temple"), NodePath("../../TerritoryButton10/Ruins of Atesh"), NodePath("../../TerritoryButton9/Fort Zaka"), NodePath("../../TerritoryButton7/Neru-Khisi")]

[node name="TerritoryButton9" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 948.0
offset_top = 712.0
offset_right = 948.0
offset_bottom = 712.0

[node name="Fort Zaka" type="Node" parent="TerritoryButton9" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton8/Medjed\'s Beacon"), NodePath("../../TerritoryButton10/Ruins of Atesh"), NodePath("../../TerritoryButton3/Nekhet\'s Rest")]

[node name="TerritoryButton10" parent="." instance=ExtResource("16_0hx7d")]
offset_left = 702.0
offset_top = 456.0
offset_right = 702.0
offset_bottom = 456.0

[node name="Ruins of Atesh" type="Node" parent="TerritoryButton10" node_paths=PackedStringArray("adjacent")]
script = ExtResource("17_wovx7")
adjacent = [NodePath("../../TerritoryButton4/Forsaken Temple"), NodePath("../../TerritoryButton8/Medjed\'s Beacon"), NodePath("../../TerritoryButton9/Fort Zaka"), NodePath("../../TerritoryButton3/Nekhet\'s Rest")]

[node name="InputBlocker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BattleResultBanner" parent="." instance=ExtResource("18_l1pmu")]
visible = false
